--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </div>
     
-    <div class="loading dont-show">
+    <div class="loading">
      
       <div class="lds-ellipsis"><div></div><div></div><div></div>
     </div>
